# bank-simulation-project-app

./: .gitignore  CMakeLists.txt  README.md  confirmtransactiondialog.cpp  confirmtransactiondialog.h  confirmtransactiondialog.ui  confirmwithdrawdialog.cpp  confirmwithdrawdialog.h  confirmwithdrawdialog.ui  helper.cpp  helper.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resources.qrc  simulatedatmdialog.cpp  simulatedatmdialog.h  simulatedatmdialog.ui  topupdialog.cpp  topupdialog.h  topupdialog.ui  transactionitem.cpp  transactionitem.h  transactionitem.ui  transferdialog.cpp  transferdialog.h  transferdialog.ui
backend/: transaction  transaction.cpp  transaction.h  user.cpp  user.h
backend-algo/bank function/: topup.cpp  topup_test  transfer.cpp  userpart.cpp  userpart.h  withdraw  withdraw.cpp  withdraw_test
backend-algo/database/: demo_transaction.txt  demo_user.txt  demo_user.txt.bak
db/: transaction.txt  user.txt
